# zero-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_scripts/: update_sysroot.sh
cmake/: toolchain.cmake
docs/: docs.md
docs/api_ref/: toc.md
scripts/: build.sh  update_sysroot.sh
src/: zdj_data_type.h
src/anim/: zdj_anim.c  zdj_anim.h
src/boot/: zdj_boot.h
src/display/: zdj_display.c
src/fs/: zdj_fs.c  zdj_fs.h
src/health/: zdj_health_type.h
src/hmi/: zdj_hmi.c  zdj_hmi.h
src/hmi/input/: zdj_hmi_input.c  zdj_hmi_input.h  zdj_hmi_m7_state_model.h  zdj_hmi_sm_analog.c  zdj_hmi_sm_digital.c
src/installer/: zdj_installer.c  zdj_installer.h
src/m7/: zdj_m7.c  zdj_m7.h
src/menu/: zdj_menu.c  zdj_menu.h  zdj_menu_parser.c  zdj_menu_parser.h
src/registry/: zdj_registry.c  zdj_registry.h  zdj_registry_install.c  zdj_registry_launch_req.c
src/sql/: zdj_sql.c  zdj_sql.h
src/ui/: zdj_ui.c  zdj_ui.h  zdj_ui_util.c
src/ui/anim/: zdj_anim.c  zdj_anim.h
src/ui/asset/: zdj_ui_asset.c  zdj_ui_asset.h
src/ui/font/: zdj_font.c  zdj_font.h
src/ui/text/font/: zdj_font.c  zdj_font.h
src/ui/text/ticker_str/: zdj_ticker_str.c  zdj_ticker_str.h
src/ui/view/: zdj_view_stack.c  zdj_view_stack.h
src/ui/view/asset_view/: zdj_asset_view.c  zdj_asset_view.h
src/ui/view/file_browser_view/: zdj_file_browser_devices_menu.c  zdj_file_browser_file_menu.c  zdj_file_browser_view.c  zdj_file_browser_view.h
src/ui/view/label_view/: zdj_label_view.c  zdj_label_view.h
src/ui/view/menu_header_view/: zdj_menu_header_view.c  zdj_menu_header_view.h
src/ui/view/menu_item_view/: zdj_menu_item_static_simple.c  zdj_menu_item_view.c  zdj_menu_item_view.h  zdj_menu_item_view_basic.c  zdj_menu_item_view_data.c  zdj_menu_item_view_dir.c  zdj_menu_item_view_nohilite.c  zdj_menu_item_view_slider.c  zdj_menu_item_view_toggle.c
src/ui/view/menu_section_view/: zdj_menu_section_view.c  zdj_menu_section_view.h
src/ui/view/menu_view/: zdj_menu_view.c  zdj_menu_view.h
src/ui/view/scroll_view/: zdj_scroll_view.c  zdj_scroll_view.h
src/ui/view/texture_view/: zdj_texture_view.c  zdj_texture_view.h
src/ui/view/ticker_view/: zdj_ticker_view.c  zdj_ticker_view.h
src/ui/view_stack/: zdj_view_stack.c  zdj_view_stack.h
src/xml/: zdj_xml.c  zdj_xml.h
sysroot/: bin
sysroot/usr/include/SDL2/: SDL_config.h  SDL_revision.h
sysroot/usr/include/aarch64-linux-gnu/zerodj/display/: zdj_display.h
sysroot/usr/include/aarch64-linux-gnu/zerodj/m7/: zdj_m7.h
sysroot/usr/include/aarch64-linux-gnu/zerodj/menu/: zdj_menu.h  zdj_menu_parser.h
sysroot/usr/include/aarch64-linux-gnu/zerodj/ui/: zdj_ui.h
sysroot/usr/include/libxml/: Makefile  xmlversion.h
sysroot/usr/include/linux/: rpmsg.h
sysroot/usr/include/sdl/: SDL_config_minimal.h
sysroot/usr/include/zerodj/boot/: zdj_boot.h
sysroot/usr/include/zerodj/display/: zdj_display.h
sysroot/usr/include/zerodj/fs/: zdj_fs.h
sysroot/usr/include/zerodj/health/: zdj_health_type.h
sysroot/usr/include/zerodj/hmi/: zdj_hmi.h  zdj_hmi_shared_state_model.h
sysroot/usr/include/zerodj/registry/: zdj_registry.h
sysroot/usr/include/zerodj/sql/: zdj_sql.h
sysroot/usr/include/zerodj/ui/: zdj_ui.h
sysroot/usr/include/zerodj/ui/asset/: zdj_ui_asset.h
sysroot/usr/include/zerodj/ui/view/: zdj_view_stack.h
sysroot/usr/include/zerodj/xml/: zdj_xml.h
sysroot/usr/lib/: libSDL-1.2.so.0.11.4  libSDL2-2.0.so.0.2400.1  libSDL2_gfx-1.0.so.0.0.2  libSDL2_image-2.0.so.0.600.2  libSDL2_ttf-2.0.so.0.18.0  libSDL_gfx.so.13.9.1  libSDL_image-1.2.so.0.8.5  libSDL_ttf-2.0.so.0.10.2  libasound.so.2.0.0  libatopology.so.2.0.0  libm.so.6  libmenu.so.6.1  libmpg123.so.0.44.12  libpthread.so.0  librt.so.1  libsqlite3.so.0.8.6  libstdc++.so.6.0.29  libxml2.so.2.10.3
sysroot/usr/lib/aarch64-linux-gnu/: libz.so.1.2.11
(+11 files in other folders)
